# claude-code-redaction-hooks

./: .pre-commit-config.yaml  .redaction_rules.example  .redaction_rules.git-hooks  CLAUDE.md  README.md  pyproject.toml
src/redaction_hooks/: __init__.py  __main__.py  actions.py  cli.py  config.py  hooks.py  mappings.py  matcher.py  models.py  path_matcher.py
tests/: test_actions.py  test_cli.py  test_config.py  test_hooks.py  test_mappings.py  test_matcher.py  test_path_matcher.py
